--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "cache-loader": "^4.1.0",
     "core-js": "^3.4.3",
-    "vue": "^2.6.10"
+    "core.js": "^0.4.2",
+    "stylus": "^0.54.7",
+    "stylus-loader": "^3.0.2",
+    "swiper": "^5.2.1",
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
@@ -18,6 +24,8 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "lib-flexible": "^0.3.2",
+    "postcss-px2rem": "^0.3.0",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
