--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "cache-loader": "^4.1.0",
     "core-js": "^3.4.3",
     "core.js": "^0.4.2",
+    "mint-ui": "^2.2.13",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
     "swiper": "^5.2.1",
+    "vee-validate": "2.2.15",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3"
   },
