--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-  "name": "app-3.x",
+  "name": "vue-app3",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/locales/**/*.json'"
   },
   "dependencies": {
-    "cache-loader": "^4.1.0",
+    "axios": "^0.19.0",
+    "babel-plugin-component": "^1.1.1",
     "core-js": "^3.4.3",
-    "core.js": "^0.4.2",
     "mint-ui": "^2.2.13",
-    "stylus": "^0.54.7",
-    "stylus-loader": "^3.0.2",
     "swiper": "^5.2.1",
     "vee-validate": "2.2.15",
     "vue": "^2.6.10",
-    "vue-router": "^3.1.3"
+    "vue-i18n": "^8.0.0",
+    "vue-router": "^3.1.3",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
@@ -28,6 +29,9 @@
     "eslint-plugin-vue": "^5.0.0",
     "lib-flexible": "^0.3.2",
     "postcss-px2rem": "^0.3.0",
+    "stylus": "^0.54.7",
+    "stylus-loader": "^3.0.2",
+    "vue-cli-plugin-i18n": "^0.6.0",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
